@@ -340,6 +340,17 @@ int CamuleApp::OnExit()
 	if (m_app_state!=APP_STATE_STARTING) {
 		printf("Now, exiting main app...\n");
 	}
+
+	// From wxWidgets docs, wxConfigBase:
+	// ...
+	// Note that you must delete this object (usually in wxApp::OnExit)
+	// in order to avoid memory leaks, wxWidgets won't do it automatically.
+	// 
+	// As it happens, you may even further simplify the procedure described
+	// above: you may forget about calling Set(). When Get() is called and
+	// there is no current object, it will create one using Create() function.
+	// To disable this behaviour DontCreateOnDemand() is provided.
+	delete wxConfigBase::Set((wxConfigBase *)NULL);
 	
 	// Save credits
 	clientcredits->SaveList();
@@ -348,9 +359,8 @@ int CamuleApp::OnExit()
 	ipfilter->SaveToFile();
 	
 	// Kill amuleweb if running
-
 	if (webserver_pid) {
-		printf("Killing amuleweb instance...\n");			
+		printf("Killing amuleweb instance...\n");
 		wxKillError rc;
 		wxKill(webserver_pid,wxSIGKILL, &rc);
 		printf("Killed!\n");
